--- a/index.html
+++ b/index.html
@@ -5,6 +5,16 @@
     <title>Document</title>
 </head>
 <body>
-   Bonjour Maitre Paul ! 
+  <h1> Portfolio de Paul Rault</h1>
+  <p>Je suis étudiants en BTS SIO au lycée Notre Dame de la Providence à Avranches et je suis passionné par l'informatique</p>
+  <ul>
+    <li> <a href="monprojetprofessionnel.html">Mon projet professionnel</a></li>
+    <li> <a href="moncv.html">Mon CV</a></li>
+    <li> <a href="mescompetences.html">Mes compétences</a></li>
+    <li><a href="mesexperiencesprofessionnelles.html">Mes expériences professionelles</a></li>
+    <li><a href="mesprojetsinformatiques.html">Mes projets informatiques</a></li>
+    <li><a href= "mescertifications.html">Mes certifications</a></li>
+    <li><a href="maveilletechnologique.html">Ma veille technologique</a></li>
+  </ul>
 </body>
 </html>
