--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<body>
+<body style="background-color: red;">
   <h1> Portfolio de Paul Rault</h1>
-  <p>Je suis étudiants en BTS SIO au lycée Notre Dame de la Providence à Avranches et je suis passionné par l'informatique</p>
+  <p>Je suis étudiant en BTS SIO au lycée Notre Dame de la Providence à Avranches et je suis passionné par l'informatique</p>
   <ul>
     <li> <a href="monprojetprofessionnel.html">Mon projet professionnel</a></li>
     <li> <a href="moncv.html">Mon CV</a></li>
